Added newspaper parameter to articles route and implemented department parameter as list
